--- a/config/locales/devise.pt.yml
+++ b/config/locales/devise.pt.yml
@@ -1,9 +1,5 @@
 pt:
   devise:
-    confirmations:
-      confirmed: "Tu Dirección de Correo ha sido confirmada exitosamente."
-      send_instructions: "Usted recibirá un correo electrónico con instrucciones sobre cómo confirmar su dirección de correo electrónico en unos minutos. Revise su carpeta de SPAM si no lo ha visto."
-      send_paranoid_instructions: "Si existe su dirección de correo electrónico en nuestra base de datos, usted recibirá un correo electrónico con instrucciones sobre cómo confirmar su dirección de correo electrónico en unos minutos."
     failure:
       already_authenticated: "Já voce iniciou sesão."
       inactive: "Su cuenta todavia no ha sido activada."
@@ -12,8 +8,8 @@ pt:
       last_attempt: "Usted tiene un(1) intento más antes de que su cuenta sea bloqueada."
       not_found_in_database: "Dirección de Correo o Contraseña Invalida"
       timeout: "Su sesión ha expirado, inicie sesión nuevamente para continuar"
-      unauthenticated: "Necesita iniciar sesión para continuar."
-      unconfirmed: "Debes confirmar tu dirección de correo para continuar."
+      unauthenticated: "Precisa iniciar sesão para continuar."
+      unconfirmed: "Deve confirmar a sua direção de correo para continuar."
       session_limited: 'Se ha iniciado sesión con su cuenta en otro explorador. Por favor, inicie sesión para continuar en este explorador.'
     mailer:
       confirmation_instructions:
